--- a/exe1/css/main.css
+++ b/exe1/css/main.css
@@ -68,6 +68,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
+    padding: 20px;
     align-items: center;
     flex-direction: column;
     transition: 0.5s ease-in-out;
@@ -80,7 +81,7 @@
 {
     
     max-width: 100%;
-    margin: 0 0 20px;
+    margin: 0 0 40px;
     transition: 0.5s ease-in-out;
 
 }
@@ -99,6 +100,7 @@
     transition: 0.5s ease-in-out;
     position: absolute;
     bottom: 20px;
+    display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
