--- a/exe1/css/main.css
+++ b/exe1/css/main.css
@@ -77,11 +77,12 @@
 {
     transform: translateY(-200px);
 }
+
 .container .card .imgBx img
 {
     
     max-width: 100%;
-    margin: 0 0 40px;
+    margin: 0 0 20px;
     transition: 0.5s ease-in-out;
 
 }
@@ -94,6 +95,7 @@
 {
     color: #fff;
     font-weight: 20px;
+    z-index: 3;
 }
 .container .card .content
 {
