--- a/exe1/css/main.css
+++ b/exe1/css/main.css
@@ -68,7 +68,7 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 0px 20px 80px;
     align-items: center;
     flex-direction: column;
     transition: 0.5s ease-in-out;
@@ -76,6 +76,7 @@
 .container .card:hover .imgBx
 {
     transform: translateY(-175px);
+   
 }
 
 .container .card .imgBx img
@@ -90,13 +91,13 @@
 .container .card:hover .imgBx img
 {
     
-    transform:  translate(-40px,40px)rotate(-25deg)scale(1.4) rotateY(180deg);
-    margin-bottom: 135px;
+    transform:  translate(-40px,100px)rotate(-25deg)scale(1.4) rotateY(180deg);
+    margin-bottom: 170px;
 }
 .container .card .imgBx h2
 {
     color: #fff;
-    font-weight: 20px;
+    font-weight: 200;
     z-index: 3;
 }
 .container .card .content
@@ -131,7 +132,8 @@
 }
 .container .card .content .size span
 {
-    width: 20px;
+    font-weight: 700;
+    width: 25px;
     height: 26px;
     text-align: center;
     line-height: 24px;
@@ -140,7 +142,7 @@
     background: #fff;
     border-radius: 4px;
     margin: 0 5px;
-    font-weight: 500;
+   
     transition: 0.5s;
     cursor: pointer;
 
